--- a/projects/icc/calendar/src/calendar.component.html
+++ b/projects/icc/calendar/src/calendar.component.html
@@ -12,8 +12,8 @@
 >
 </mat-calendar>
 
-<span class="icc-date-selected-label">
+<span class="icc-calendar-selected-label">
   <label translate>{{ calendarConfig.selectedLabel }}</label
   ><span>:</span>
-  <label class="icc-date-range-selected-date-label">{{ selectedDate! | localeDate: calendarConfig.dateFormat }}</label>
+  <label class="icc-calendar-selected-date">{{ selectedDate! | localeDate: calendarConfig.dateFormat }}</label>
 </span>
