add layout footer

--- a/projects/icc/fields/src/date-range-field/date-range-picker/date-range-picker.component.html
+++ b/projects/icc/fields/src/date-range-field/date-range-picker/date-range-picker.component.html
@@ -21,12 +21,17 @@
     </icc-calendar>
   </div>
 
-  <icc-layout-footer class="icc-date-bottom-bar">
-    <button icc-button status="primary" (click)="applyNewDates($event)">
-      <span translate>{{ "ICC.UI.ACTIONS.APPLY" }}</span>
-    </button>
-    <button icc-button (click)="discardNewDates($event)">
-      <span translate>{{ "ICC.UI.ACTIONS.CANCEL" }}</span>
-    </button>
+  <icc-layout-footer>
+    <icc-layout-footer-start></icc-layout-footer-start>
+    <icc-layout-footer-center>Middle</icc-layout-footer-center>
+
+    <icc-layout-footer-end>
+      <button icc-button status="primary" (click)="applyNewDates($event)">
+        <span translate>{{ "ICC.UI.ACTIONS.APPLY" }}</span>
+      </button>
+      <button icc-button (click)="discardNewDates($event)">
+        <span translate>{{ "ICC.UI.ACTIONS.CANCEL" }}</span>
+      </button>
+    </icc-layout-footer-end>
   </icc-layout-footer>
 </icc-layout>
