--- a/projects/icc/layout/src/layout-footer.component.html
+++ b/projects/icc/layout/src/layout-footer.component.html
@@ -1,3 +1,4 @@
 <ng-content select="icc-layout-footer-start"></ng-content>
+<ng-content></ng-content>
 <ng-content select="icc-layout-footer-center"></ng-content>
 <ng-content select="icc-layout-footer-end"></ng-content>
