--- a/projects/icc/layout/src/layout-footer.component.scss
+++ b/projects/icc/layout/src/layout-footer.component.scss
@@ -9,10 +9,12 @@
     icc-layout-footer-start {
       margin-left: 0;
       margin-right: auto;
+      padding-right: 10px;
     }
 
     icc-layout-footer-center {
       margin: auto;
+      padding-right: 10px;
     }
 
     icc-layout-footer-end {
