date month changes

--- a/projects/icc/fields/src/date-field/date-field.component.html
+++ b/projects/icc/fields/src/date-field/date-field.component.html
@@ -20,7 +20,7 @@
       [required]="required"
       readonly
     />
-    <button iccSuffix icc-button [ghost]="true" (click)="openCalendar()">
+    <button iccSuffix icc-button [ghost]="true" [disabled]="field.disabled" (click)="openCalendar()">
       <icc-icon icon="calendar"></icc-icon>
     </button>
 
