--- a/projects/icc/fields/src/date-range-field/date-range-field.component.html
+++ b/projects/icc/fields/src/date-range-field/date-range-field.component.html
@@ -22,7 +22,7 @@
       readonly
     />
 
-    <button iccSuffix icc-button [ghost]="true" (click)="openCalendar()">
+    <button iccSuffix icc-button [ghost]="true" [disabled]="field.disabled" (click)="openCalendar()">
       <icc-icon icon="calendar"></icc-icon>
     </button>
 
