--- a/projects/icc/window/src/window.component.scss
+++ b/projects/icc/window/src/window.component.scss
@@ -17,7 +17,7 @@
     width: 100%;
     height: 100%;
     z-index: 1000;
-    border: 1px solid pink;
+    border: 1px solid lightgray;
     overflow: hidden;
   }
 }
