--- a/projects/icc/theme/src/_components.scss
+++ b/projects/icc/theme/src/_components.scss
@@ -5,6 +5,7 @@
 @forward "../../menu/src/menu.component.theme";
 @forward "../../accordion/src/accordion.component.theme";
 @forward "../../option//src/option.component.theme";
+@forward "../../fields/src/fields.component.theme";
 @forward "../../form-field/src/form-field.component.theme";
 @forward "../../checkbox/src/checkbox.component.theme";
 @forward "../../radio/src/radio.component.theme";
@@ -12,3 +13,4 @@
 @forward "../../resize/src/resize.directive.theme";
 @forward "../../dashboard/src/dashboard.component.theme";
 @forward "../../calendar/src/calendar.component.theme";
+@forward "../../window/src/window.component.theme";
