--- a/projects/icc/fields/src/date-field/date-picker/date-picker.component.html
+++ b/projects/icc/fields/src/date-field/date-picker/date-picker.component.html
@@ -17,7 +17,7 @@
       ></icc-select-field>
     </icc-layout-footer-start>
     <icc-layout-footer-end>
-      <button icc-button status="primary" (click)="applyNewDates($event)">
+      <button icc-button (click)="applyNewDates($event)">
         <span translate>{{ "ICC.UI.ACTIONS.APPLY" }}</span>
       </button>
       <button icc-button (click)="discardNewDates($event)">
