--- a/projects/icc/fields/src/date-range-field/date-range-picker/date-range-picker.component.html
+++ b/projects/icc/fields/src/date-range-field/date-range-picker/date-range-picker.component.html
@@ -33,7 +33,7 @@
     </icc-layout-footer-center>
 
     <icc-layout-footer-end>
-      <button icc-button status="primary" (click)="applyNewDates($event)">
+      <button icc-button (click)="applyNewDates($event)">
         <span translate>{{ "ICC.UI.ACTIONS.APPLY" }}</span>
       </button>
       <button icc-button (click)="discardNewDates($event)">
