--- a/projects/icc/window/src/window.component.html
+++ b/projects/icc/window/src/window.component.html
@@ -6,13 +6,15 @@
   (cdkDragEnded)="dragEnded($event)"
 >
   <icc-layout-header *ngIf="windowConfig.showHeader" [title]="windowConfig.title">
-    <button icc-button *ngIf="windowConfig.maximizable && isMaxWindowSize" (click)="restore()">
+    <button icc-button [ghost]="true" *ngIf="windowConfig.maximizable && isMaxWindowSize" (click)="restore()">
       <icc-icon icon="window-restore"></icc-icon>&nbsp;
     </button>
-    <button icc-button *ngIf="windowConfig.maximizable && !isMaxWindowSize" (click)="maximize()">
+    <button icc-button [ghost]="true" *ngIf="windowConfig.maximizable && !isMaxWindowSize" (click)="maximize()">
       <icc-icon icon="expand"></icc-icon>&nbsp;
     </button>
-    <button icc-button *ngIf="windowConfig.closable" (click)="close()"><icc-icon icon="close"></icc-icon>&nbsp;</button>
+    <button icc-button [ghost]="true" *ngIf="windowConfig.closable" (click)="close()">
+      <icc-icon icon="close"></icc-icon>&nbsp;
+    </button>
   </icc-layout-header>
 
   <ng-content></ng-content>
