--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -3,6 +3,7 @@
 $theme: (
   --app-background-color: hsl(0, 0%, 100%),
   app-border-basic-color: #d0c6bc,
+  background-basic-color: #f6f1ed,
   app-text-basic-color: #4b4f54,
   color-basic-default: #4b4f54,
   color-basic-transparent-default: #f6f1ed,
