--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -3,6 +3,7 @@
 $theme: (
   --app-background-color: hsl(0, 0%, 0%),
   app-border-basic-color: #4b4f54,
+  background-basic-color: #282828,
   app-text-basic-color: #adadad,
   color-basic-default: #4b4f54,
   color-basic-transparent-default: #f6f1ed,
