--- a/projects/icc/calendar/src/_calendar.component.theme.scss
+++ b/projects/icc/calendar/src/_calendar.component.theme.scss
@@ -1,6 +1,42 @@
 @use "../../theme/src/icc";
 
 @mixin icc-calendar-theme() {
+  icc-calendar {
+    background-color: icc.icc-theme(calendar-panel-background-color);
+
+    .mat-calendar-body-today {
+      background-color: icc.icc-theme(calendar-today-background-color);
+      border-color: icc.icc-theme(calendar-today-background-color) !important;
+      color: icc.icc-theme(calendar-date-range-dates-color);
+    }
+
+    .icc-date-range-selected-date-start {
+      .mat-calendar-body-cell-content {
+        border-radius: 0.25rem 0 0 0.25rem;
+        color: icc.icc-theme(calendar-date-range-dates-color);
+        background-color: icc.icc-theme(calendar-date-selected-background-color) !important;
+      }
+    }
+
+    .icc-date-range-selected-date-end {
+      .mat-calendar-body-cell-content {
+        border-radius: 0 0.25rem 0.25rem 0;
+        color: icc.icc-theme(calendar-date-range-dates-color);
+        background-color: icc.icc-theme(calendar-date-selected-background-color) !important;
+      }
+    }
+
+    .mat-calendar-body-selected {
+      color: icc.icc-theme(calendar-date-range-dates-color);
+      background-color: icc.icc-theme(calendar-date-selected-background-color);
+    }
+
+    .mat-calendar-body-cell-content:hover {
+      background-color: icc.icc-theme(calendar-date-hover-background-color) !important;
+      color: icc.icc-theme(calendar-date-range-dates-color);
+    }
+  }
+
   icc-calendar,
   icc-date-field,
   icc-date-range-field,
@@ -9,6 +45,11 @@
   .mat-calendar-body-cell-content,
   .mat-calendar-table-header th {
     color: icc.icc-theme(app-text-basic-color);
+  }
+
+  icc-date-picker,
+  icc-date-range-picker {
+    border: solid 1px icc.icc-theme(app-border-basic-color);
   }
 
   .mat-mdc-icon-button[disabled] {
@@ -33,37 +74,15 @@
   }
 
   .icc-date-range-dates::before {
-    color: icc.icc-theme(color-basic-default);
-    background-color: icc.icc-theme(color-basic-transparent-default);
+    background-color: icc.icc-theme(calendar-date-range-dates-background-color) !important;
   }
 
-  icc-calendar {
-    background-color: icc.icc-theme(background-basic-color);
-
-    .mat-calendar-body-selected {
-      background-color: blue;
+  .icc-date-range-dates {
+    .mat-calendar-body-cell-content {
+      color: icc.icc-theme(calendar-date-range-dates-color);
     }
-
-    .icc-date-range-selected-date-start {
-      .mat-calendar-body-cell-content {
-        border-radius: 0.25rem 0 0 0.25rem;
-        background-color: blue !important;
-      }
-    }
-    .icc-date-range-selected-date-end {
-      .mat-calendar-body-cell-content {
-        border-radius: 0 0.25rem 0.25rem 0;
-        background-color: blue !important;
-      }
-    }
-
     .mat-calendar-body-today {
-      background-color: orangered !important;
-      color: darkmagenta;
-    }
-
-    .mat-calendar-body-cell-content:hover {
-      background-color: green !important;
+      background-color: icc.icc-theme(calendar-date-range-dates-background-color);
     }
   }
 }
