--- a/projects/icc/fields/src/date-field/date-picker/date-picker.component.scss
+++ b/projects/icc/fields/src/date-field/date-picker/date-picker.component.scss
@@ -9,5 +9,8 @@
 
   icc-layout-footer-start {
     width: 180px;
+    ::ng-deep .icc-form-field-container {
+      background-color: unset;
+    }
   }
 }
