--- a/projects/icc/fields/src/date-range-field/date-range-picker/date-range-picker.component.scss
+++ b/projects/icc/fields/src/date-range-field/date-range-picker/date-range-picker.component.scss
@@ -13,5 +13,8 @@
 
   icc-layout-footer-center {
     width: 240px;
+    ::ng-deep .icc-form-field-container {
+      background-color: unset;
+    }
   }
 }
