--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -3,7 +3,6 @@
 $theme: (
   --app-background-color: hsl(0, 0%, 100%),
   app-border-basic-color: #d0c6bc,
-  background-basic-color: #f6f1ed,
   app-text-basic-color: #4b4f54,
   color-basic-default: #4b4f54,
   color-basic-transparent-default: #f6f1ed,
@@ -54,18 +53,12 @@ $theme: (
   checkmark-background-color: transparent,
   checkmark-checked-background-color: transparent,
 
-  calendar-panel-background-color: #fbfbfb,
-  calendar-weekdays-text-color: #757575,
-
-  calendar-month-day-text-color: #4b4f54,
-  calendar-month-today-border-color: #4b4f54,
-  calendar-month-day-selected-text-color: #4b4f54,
-  calendar-month-day-selected-background-color: #f8c48f,
-  calendar-month-day-hover-text-color: #4b4f54,
-  calendar-month-day-hover-background-color: #c5cbe9,
-
-  calendar-month-header-background-color: #fdeede,
-  calendar-month-header-text-color: #4b4f54,
+  calendar-panel-background-color: #fff,
+  calendar-date-range-dates-color: #1f1f1f,
+  calendar-date-range-dates-background-color: #f6f1ed,
+  calendar-date-selected-background-color: #f8c48f,
+  calendar-today-background-color: orangered,
+  calendar-date-hover-background-color: lightgreen,
 
   radio-background-color: #ffffff,
   radio-border-color: #dedede,
