--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -18,7 +18,7 @@
         [value]="i18nService.currentLang"
         [options]="i18nService.languages"
         [showFieldEditIndicator]="false"
-        (selectionChange)="setLang($event)"
+        (valueChange)="setLang($event)"
       ></icc-select-field>
     </icc-layout-header-end>
   </icc-layout-header>
