--- a/projects/icc/fields/src/date-field/date-picker/date-picker.component.html
+++ b/projects/icc/fields/src/date-field/date-picker/date-picker.component.html
@@ -13,7 +13,7 @@
         [fieldConfig]="presetSelectionConfig"
         [options]="presets"
         [showFieldEditIndicator]="false"
-        (selectionChange)="updateSelectDateByPreset($event)"
+        (valueChange)="updateSelectDateByPreset($event)"
       ></icc-select-field>
     </icc-layout-footer-start>
     <icc-layout-footer-end>
