--- a/projects/icc/fields/src/date-range-field/date-range-picker/date-range-picker.component.html
+++ b/projects/icc/fields/src/date-range-field/date-range-picker/date-range-picker.component.html
@@ -28,7 +28,7 @@
         [fieldConfig]="presetSelectionConfig"
         [options]="presets"
         [showFieldEditIndicator]="false"
-        (selectionChange)="updateRangeByPreset($event)"
+        (valueChange)="updateRangeByPreset($event)"
       ></icc-select-field>
     </icc-layout-footer-center>
 
