--- a/projects/icc/grid/src/components/column-filter/select/select-filter.component.html
+++ b/projects/icc/grid/src/components/column-filter/select/select-filter.component.html
@@ -3,6 +3,6 @@
   [fieldConfig]="fieldConfig"
   [value]="value"
   [showFieldEditIndicator]="false"
-  (selectionChange)="onSelectionChange($event)"
+  (valueChange)="onValueChange($event)"
 >
 </icc-select-field>
