add mat tabs base without css

--- a/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.html
+++ b/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.html
@@ -1,5 +1,14 @@
+<!--
+
 <icc-date-range-field [fieldConfig]="dateRangeFieldConfig" [value]="range" (valueChange)="updateRange($event)">
 </icc-date-range-field>
 
 <icc-date-field [fieldConfig]="dateFieldConfig" [value]="selectedDate" (valueChange)="valueChange($event)">
 </icc-date-field>
+-->
+
+<mat-tab-group mat-stretch-tabs="true" mat-align-tabs="start">
+  <mat-tab label="First">Content 1</mat-tab>
+  <mat-tab label="Second">Content 2</mat-tab>
+  <mat-tab label="Third">Content 3</mat-tab>
+</mat-tab-group>
