--- a/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.scss
+++ b/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.scss
@@ -3,3 +3,11 @@
   flex-direction: row;
   width: 100%;
 }
+
+::ng-deep .mat-mdc-tab-labels {
+  display: flex;
+}
+
+::ng-deep .mdc-tab {
+  padding: 0 10px;
+}
