--- a/projects/icc-demo/src/app/views/tabs/demos/simple-tabs/simple-tabs.component.html
+++ b/projects/icc-demo/src/app/views/tabs/demos/simple-tabs/simple-tabs.component.html
@@ -1,5 +1,5 @@
-<mat-tab-group mat-stretch-tabs="true" mat-align-tabs="start">
-  <mat-tab label="First">Content 1</mat-tab>
-  <mat-tab label="Second">Content 2</mat-tab>
-  <mat-tab label="Third">Content 3</mat-tab>
-</mat-tab-group>
+<icc-tab-group mat-stretch-tabs="true" mat-align-tabs="start">
+  <icc-tab label="First">Content 1</icc-tab>
+  <icc-tab label="Second">Content 2</icc-tab>
+  <icc-tab label="Third">Content 3</icc-tab>
+</icc-tab-group>
