--- a/projects/icc/tabs/src/components/tab-group/tab-group.component.html
+++ b/projects/icc/tabs/src/components/tab-group/tab-group.component.html
@@ -9,7 +9,7 @@
 >
   @for (tab of _tabs; track tab; let i = $index) {
     <div
-      class="mdc-tab mat-mdc-tab mat-focus-indicator"
+      class="mdc-tab icc-mdc-tab icc-focus-indicator"
       #tabNode
       role="tab"
       iccTabLabelWrapper
