--- a/projects/icc/tabs/src/components/tab-header/tab-header.component.html
+++ b/projects/icc/tabs/src/components/tab-header/tab-header.component.html
@@ -23,7 +23,7 @@
     [attr.aria-labelledby]="ariaLabelledby || null"
     (cdkObserveContent)="_onContentChanges()"
   >
-    <div class="mat-mdc-tab-labels" #tabListInner>
+    <div class="icc-mdc-tab-labels" #tabListInner>
       <ng-content></ng-content>
     </div>
   </div>
