--- a/projects/icc/tabs/src/components/tab-group/tab-group.component.html
+++ b/projects/icc/tabs/src/components/tab-group/tab-group.component.html
@@ -58,8 +58,8 @@
 }
 
 <div
-  class="mat-mdc-tab-body-wrapper"
-  [class._mat-animation-noopable]="_animationMode === 'NoopAnimations'"
+  class="icc-mdc-tab-body-wrapper"
+  [class._icc-animation-noopable]="_animationMode === 'NoopAnimations'"
   #tabBodyWrapper
 >
   @for (tab of _tabs; track tab) {
