add tabs drag drop

--- a/projects/icc-demo/src/app/views/tabs/demos/simple-tabs/simple-tabs.component.html
+++ b/projects/icc-demo/src/app/views/tabs/demos/simple-tabs/simple-tabs.component.html
@@ -3,3 +3,5 @@
   <icc-tab label="Second">Content 2</icc-tab>
   <icc-tab label="Third">Content 3</icc-tab>
 </icc-tab-group>
+
+<icc-tabs> </icc-tabs>
