--- a/projects/icc/tabs/src/tabs.component.scss
+++ b/projects/icc/tabs/src/tabs.component.scss
@@ -5,7 +5,7 @@
     pointer-events: none;
   }
 
-  .example-drag-tabs-preview.cdk-drag-animating {
+  .icc-drag-tabs-preview.cdk-drag-animating {
     transition: all 250ms cubic-bezier(0, 0, 0.2, 1);
   }
 
