--- a/projects/icc/tabs/src/tabs.component.scss
+++ b/projects/icc/tabs/src/tabs.component.scss
@@ -1,5 +1,25 @@
 :host {
   width: 100%;
+  height: 100%;
+
+  icc-tab-group {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+
+    ::ng-deep icc-tab-header {
+      display: flex;
+      width: 100%;
+      height: 28px;
+      align-items: center;
+      border: 1px solid blue;
+    }
+
+    ::ng-deep .icc-mdc-tab-body-wrapper {
+      height: 100%;
+      border: 1px solid green;
+    }
+  }
 
   .icc-drag-tabs.cdk-drop-list-dragging {
     pointer-events: none;
