--- a/projects/icc/tabs/src/components/tab-header/tab-header.component.scss
+++ b/projects/icc/tabs/src/components/tab-header/tab-header.component.scss
@@ -1,4 +1,10 @@
 :host {
+  display: flex;
+  width: 100%;
+  height: 28px;
+  align-items: center;
+  border: 1px solid blue;
+
   .icc-mdc-tab-labels {
     display: flex;
   }
