--- a/projects/icc/tabs/src/tabs.component.html
+++ b/projects/icc/tabs/src/tabs.component.html
@@ -8,14 +8,14 @@
   animationDuration="0"
   (selectedIndexChange)="onSelectedIndexChange($event)"
 >
-  @for (tab of tabs; track $index) {
+  @for (tab of tabs; track $index; let idx = $index) {
     <icc-tab>
       <ng-template icc-tab-label>
         <span cdkDrag cdkDragPreviewClass="icc-drag-tabs-preview" cdkDragRootElement=".icc-mdc-tab">{{
           getTabLabel(tab)
         }}</span>
       </ng-template>
-      <icc-portal [content]="tab.content!" [context]="tab.context!"></icc-portal>
+      <icc-portal *ngIf="idx === selectedTabIndex" [content]="tab.content!" [context]="tab.context!"></icc-portal>
     </icc-tab>
   }
 </icc-tab-group>
