--- a/projects/icc/tabs/src/tabs.component.html
+++ b/projects/icc/tabs/src/tabs.component.html
@@ -14,7 +14,12 @@
         <span cdkDrag cdkDragPreviewClass="icc-drag-tabs-preview" cdkDragRootElement=".icc-mdc-tab"
           >{{ getTabLabel(tab) }}
         </span>
-        <icc-icon class="icc-tab-remove-icon" icon="remove" (click)="removeTab(tab, idx)"></icc-icon>
+        <icc-icon
+          *ngIf="tab.closeable"
+          class="icc-tab-remove-icon"
+          icon="remove"
+          (click)="removeTab($event, tab, idx)"
+        ></icc-icon>
       </ng-template>
       <icc-portal *ngIf="idx === selectedTabIndex" [content]="tab.content!" [context]="tab.context!"></icc-portal>
     </icc-tab>
