--- a/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.scss
@@ -1,8 +1,8 @@
 :host {
   display: flex;
   flex-direction: column;
-  width: 200px; //TODO move to theme?
-  padding: 0; // 10px;
+  width: 200px;
+  padding: 0;
   align-items: left;
 
   button,
