--- a/projects/icc/tabs/src/tabs.component.scss
+++ b/projects/icc/tabs/src/tabs.component.scss
@@ -13,12 +13,12 @@
 
   .icc-tab-remove-icon {
     position: fixed;
-    opacity: 0.25;
+    opacity: 0.35;
     color: grey;
   }
 
   .icc-tab-remove-icon:hover {
-    color: green;
+    color: orangered;
     opacity: 1;
   }
 
