--- a/projects/icc/tabs/src/components/tab-group/tab-group.component.scss
+++ b/projects/icc/tabs/src/components/tab-group/tab-group.component.scss
@@ -31,3 +31,15 @@
     color: orange;
   }
 }
+
+::ng-deep [icc-align-tabs="start"] > .icc-mdc-tab-header {
+  justify-content: start;
+}
+
+::ng-deep [icc-align-tabs="center"] > .icc-mdc-tab-header {
+  justify-content: center;
+}
+
+::ng-deep [icc-align-tabs="end"] > .icc-mdc-tab-header {
+  justify-content: end;
+}
