--- a/projects/icc-demo/src/app/views/menu/demos/simple-menu/simple-menu.component.html
+++ b/projects/icc-demo/src/app/views/menu/demos/simple-menu/simple-menu.component.html
@@ -4,7 +4,8 @@
   <div [ngStyle]="{ display: 'flex', 'flex-direction': 'row' }">
     Click Popover Menu
     <div [ngStyle]="{ 'padding-left': '5px', width: '10px' }">
-      <icc-popover-menu [menuItem]="testMenuItems" [clickToClose]="true"> </icc-popover-menu>
+      <icc-popover-menu [menuItem]="testMenuItems" [clickToClose]="true" [menuTrigger]="contextmenu">
+      </icc-popover-menu>
     </div>
   </div>
 
