--- a/projects/icc/tabs/src/tabs.component.html
+++ b/projects/icc/tabs/src/tabs.component.html
@@ -18,7 +18,7 @@
           cdkDragPreviewClass="icc-drag-tabs-preview"
           cdkDragRootElement=".icc-mdc-tab"
           [iccPopover]="menu"
-          [iccPopoverTrigger]="menuTrigger"
+          [iccPopoverTrigger]="contextMenuTrigger"
           [clickToClose]="true"
           [iccPopoverPosition]="position"
           >{{ getTabLabel(tab) }}
