add tabs pagination

--- a/projects/icc/tabs/src/components/tab-header/tab-header.component.html
+++ b/projects/icc/tabs/src/components/tab-header/tab-header.component.html
@@ -6,7 +6,7 @@
   (mousedown)="_handlePaginatorPress('before', $event)"
   (touchend)="_stopInterval()"
 >
-  <div class="icc-mdc-tab-header-pagination-chevron"></div>
+  <div class="icc-mdc-tab-header-pagination-chevron">X</div>
 </div>
 
 <div
@@ -37,5 +37,5 @@
   (click)="_handlePaginatorClick('after')"
   (touchend)="_stopInterval()"
 >
-  <div class="icc-mdc-tab-header-pagination-chevron"></div>
+  <div class="icc-mdc-tab-header-pagination-chevron">Y</div>
 </div>
