--- a/projects/icc/tabs/src/components/tab-header/tab-header.component.scss
+++ b/projects/icc/tabs/src/components/tab-header/tab-header.component.scss
@@ -1,10 +1,23 @@
 :host {
   display: flex;
+  overflow: hidden;
+  position: relative;
   width: 100%;
   height: 28px;
   align-items: center;
 
   .icc-mdc-tab-labels {
     display: flex;
+  }
+
+  .icc-mdc-tab-header-pagination-chevron {
+    color: red;
+    border: 1px solid cyan;
+  }
+
+  .icc-mdc-tab-label-container {
+    display: flex;
+    overflow: hidden;
+    position: relative;
   }
 }
