add tabs pagination

--- a/projects/icc/tabs/src/components/tab-group/tab-group.component.scss
+++ b/projects/icc/tabs/src/components/tab-group/tab-group.component.scss
@@ -10,6 +10,7 @@
   .icc-mdc-tab {
     padding: 0 10px;
     margin: 0 2px;
+    white-space: nowrap;
   }
 
   ::ng-deep .icc-mdc-tab-body-active {
