--- a/projects/icc/tabs/src/components/tab-header/tab-header.component.scss
+++ b/projects/icc/tabs/src/components/tab-header/tab-header.component.scss
@@ -12,11 +12,19 @@
 
   .icc-mdc-tab-header-pagination-chevron {
     padding: 0 3px;
-    color: red;
-    border: 1px solid cyan;
+  }
+
+  button {
+    color: green;
+    icc-icon {
+      padding-right: 0px;
+      font-size: 1rem;
+      height: 1rem;
+    }
   }
 
   .icc-mdc-tab-label-container {
+    width: 100%;
     display: flex;
     overflow: hidden;
     position: relative;
